<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_light"
	android:orientation="vertical"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ui.AccountActivity">
	
	<Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary"
		android:navigationIcon="@drawable/ic_arrow_back"
		android:popupTheme="@style/DKFarms.PopupOverlay"
		android:theme="@style/DKFarms.AppBarOverlay"
		android:title="@string/account" />
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:paddingTop="@dimen/spacing_normal">
			
			<!--Card profile-->
			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/background_card"
				app:contentPadding="@dimen/padding_normal">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					
					<io.peanutsdk.widget.BaselineGridTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start|top"
						android:paddingBottom="@dimen/padding_normal"
						android:text="@string/profile"
						android:textAllCaps="true"
						android:textColor="@color/accent"
						android:textStyle="bold"
						app:fontFamily="@font/nunito_semibold" />
					
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_vertical">
						
						<io.peanutsdk.widget.ForegroundImageView
							android:id="@+id/user_profile"
							android:layout_width="@dimen/fab_size"
							android:layout_height="@dimen/fab_size"
							android:layout_alignParentStart="true"
							android:layout_alignParentTop="true"
							android:src="@drawable/avatar_placeholder" />
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:id="@+id/user_username"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true"
							android:layout_marginStart="@dimen/padding_normal"
							android:layout_toEndOf="@id/user_profile"
							android:textColor="@color/text_secondary_dark"
							android:textSize="18sp"
							app:fontFamily="@font/nunito_semibold"
							tools:text="Mr. Mukson" />
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:id="@+id/user_email"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_below="@id/user_username"
							android:layout_marginBottom="@dimen/spacing_normal"
							android:layout_marginStart="@dimen/padding_normal"
							android:layout_toEndOf="@id/user_profile"
							android:textColor="@color/text_tertiary_dark"
							android:textSize="16sp"
							app:fontFamily="@font/nunito_semibold"
							tools:text="mukson@account.com" />
					
					
					</RelativeLayout>
				
				</LinearLayout>
			
			</android.support.v7.widget.CardView>
			
			<!--Data-->
			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_normal"
				app:cardBackgroundColor="@color/background_card"
				app:contentPadding="@dimen/padding_normal">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					
					<io.peanutsdk.widget.BaselineGridTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start|top"
						android:paddingBottom="@dimen/padding_normal"
						android:text="@string/data"
						android:textAllCaps="true"
						android:textColor="@color/accent"
						android:textStyle="bold"
						app:fontFamily="@font/nunito_semibold" />
					
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_vertical">
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:id="@+id/data_header"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentStart="true"
							android:layout_alignParentTop="true"
							android:layout_marginStart="@dimen/padding_normal"
							android:text="@string/data_saving_mode"
							android:textColor="@color/text_secondary_dark"
							android:textSize="18sp"
							app:fontFamily="@font/nunito_semibold" />
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:id="@+id/data_content"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignParentStart="true"
							android:layout_below="@id/data_header"
							android:layout_marginBottom="@dimen/spacing_normal"
							android:layout_marginStart="@dimen/padding_normal"
							android:layout_toStartOf="@id/data_switch"
							android:paddingEnd="@dimen/padding_dialog"
							android:paddingStart="@dimen/zero_padding"
							android:text="@string/data_saving_content"
							android:textColor="@color/text_tertiary_dark"
							android:textSize="16sp"
							app:fontFamily="@font/nunito_semibold" />
						
						<Switch
							android:id="@+id/data_switch"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentEnd="true"
							android:layout_centerVertical="true" />
					
					</RelativeLayout>
					
					<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_marginBottom="@dimen/spacing_normal"
						android:layout_marginTop="@dimen/spacing_normal"
						android:background="@color/mid_grey" />
					
					<RelativeLayout
						android:id="@+id/cache_reset_container"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_vertical">
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:id="@+id/cache_header"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentStart="true"
							android:layout_alignParentTop="true"
							android:layout_marginStart="@dimen/padding_normal"
							android:text="@string/clear_cache"
							android:textColor="@color/text_secondary_dark"
							android:textSize="18sp"
							app:fontFamily="@font/nunito_semibold" />
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:id="@+id/cache_content"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignParentStart="true"
							android:layout_below="@id/cache_header"
							android:layout_marginBottom="@dimen/spacing_normal"
							android:layout_marginStart="@dimen/padding_normal"
							android:paddingEnd="@dimen/padding_dialog"
							android:paddingStart="@dimen/zero_padding"
							android:text="@string/clear_all_images_stored_in_cache"
							android:textColor="@color/text_tertiary_dark"
							android:textSize="16sp"
							app:fontFamily="@font/nunito_semibold" />
					
					</RelativeLayout>
				
				</LinearLayout>
			
			</android.support.v7.widget.CardView>
			
			<!--About-->
			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_normal"
				app:cardBackgroundColor="@color/background_card"
				app:contentPadding="@dimen/padding_normal">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					
					<io.peanutsdk.widget.BaselineGridTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start|top"
						android:paddingBottom="@dimen/padding_normal"
						android:text="@string/about"
						android:textAllCaps="true"
						android:textColor="@color/accent"
						android:textStyle="bold"
						app:fontFamily="@font/nunito_semibold" />
					
					<ImageView
						android:layout_width="150dp"
						android:layout_height="150dp"
						android:layout_gravity="center_horizontal"
						android:src="@drawable/dk_farms"
						tools:ignore="ContentDescription" />
					
					<io.peanutsdk.widget.BaselineGridTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:text="@string/farm_app_name"
						android:textColor="@color/text_secondary_dark"
						android:textSize="18sp"
						app:fontFamily="@font/nunito_semibold" />
					
					<io.peanutsdk.widget.BaselineGridTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginBottom="@dimen/spacing_normal"
						android:paddingEnd="@dimen/padding_dialog"
						android:paddingStart="@dimen/zero_padding"
						android:text="@string/farm_app_desc"
						android:textAlignment="center"
						android:textColor="@color/text_tertiary_dark"
						android:textSize="16sp"
						app:fontFamily="@font/nunito_semibold" />
					
					<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_marginBottom="@dimen/spacing_normal"
						android:layout_marginTop="@dimen/spacing_normal"
						android:background="@color/mid_grey" />
					
					<LinearLayout
						android:id="@+id/action_share"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/spread"
							android:textColor="@color/text_secondary_dark"
							android:textSize="18sp"
							app:fontFamily="@font/nunito_semibold" />
						
						<io.peanutsdk.widget.BaselineGridTextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/spacing_normal"
							android:paddingEnd="@dimen/padding_dialog"
							android:paddingStart="@dimen/zero_padding"
							android:text="@string/share_data"
							android:textColor="@color/text_tertiary_dark"
							android:textSize="16sp"
							app:fontFamily="@font/nunito_semibold" />
					
					</LinearLayout>
				
				
				</LinearLayout>
			
			</android.support.v7.widget.CardView>
		
		</LinearLayout>
	
	</ScrollView>

</LinearLayout>