<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:id="@+id/container"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ui.OrderActivity">
	
	<Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary"
		android:navigationIcon="@drawable/ic_arrow_back"
		android:popupTheme="@style/DKFarms.PopupOverlay"
		android:theme="@style/DKFarms.AppBarOverlay"
		android:title="@string/orders" />
	
	<!--Shows whether or not the cart is empty-->
	<LinearLayout
		android:id="@+id/empty_cart"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="150dp"
		android:gravity="center_horizontal"
		android:orientation="vertical">
		
		<io.peanutsdk.widget.BaselineGridTextView
			style="@style/TextAppearance.DribbbleShotDescription"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:drawablePadding="@dimen/padding_dialog"
			android:drawableTop="@drawable/ic_empty_cart"
			android:gravity="center_horizontal"
			android:text="@string/empty_cart_prompt"
			android:textColor="@color/dark_icon" />
		
		<Button
			android:id="@+id/start_shopping"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:alpha="0.8"
			android:padding="@dimen/padding_normal"
			android:text="@string/start_shopping"
			android:textColor="@color/text_primary_light"
			android:visibility="invisible" />
	
	</LinearLayout>
	
	<android.support.v7.widget.RecyclerView
		android:id="@+id/grid_orders"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:scrollbarStyle="outsideOverlay"
		android:scrollbars="vertical"
		android:visibility="gone" />


</LinearLayout>