<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_light"
	android:orientation="vertical"
	tools:context=".ui.LocationActivity">
	
	<Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary"
		android:navigationIcon="@drawable/ic_arrow_back"
		android:popupTheme="@style/DKFarms.PopupOverlay"
		android:theme="@style/DKFarms.AppBarOverlay"
		android:title="@string/location" />
	
	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/map"
		android:name="com.google.android.gms.maps.MapFragment"
		android:layout_width="match_parent"
		android:layout_height="300dp" />
	
	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/spacing_normal"
		android:layout_marginStart="@dimen/spacing_normal"
		android:layout_marginTop="@dimen/padding_normal"
		android:background="@color/background_card"
		app:cardCornerRadius="@dimen/spacing_micro"
		app:cardElevation="@dimen/z_card">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/padding_normal">
			
			<io.peanutsdk.widget.BaselineGridTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start|top"
				android:text="@string/my_current_location"
				android:textColor="@color/text_primary_dark"
				android:textSize="18sp"
				app:fontFamily="@font/nunito_semibold" />
			
			<io.peanutsdk.widget.BaselineGridTextView
				android:id="@+id/user_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:textColor="@color/text_secondary_dark"
				android:textSize="16sp"
				app:fontFamily="@font/nunito_semibold"
				tools:text="Legon, Accra" />
		
		</LinearLayout>
	
	</android.support.v7.widget.CardView>
	
	<Button
		android:id="@+id/update_location"
		style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/padding_dialog"
		android:backgroundTint="@color/accent"
		android:padding="@dimen/padding_normal"
		android:text="@string/update_location"
		android:textColor="@color/text_primary_light" />

</LinearLayout>