<?xml version="1.0" encoding="utf-8"?>
<io.peanutsdk.widget.ForegroundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ui.PurchasesActivity">
	
	<Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:background="@color/primary"
		android:navigationIcon="@drawable/ic_arrow_back"
		android:popupTheme="@style/DKFarms.PopupOverlay"
		android:theme="@style/DKFarms.AppBarOverlay"
		android:title="@string/purchases" />
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="@dimen/padding_normal">
			
			<io.peanutsdk.widget.ForegroundImageView
				android:id="@+id/user_profile"
				android:layout_width="@dimen/large_avatar_size"
				android:layout_height="@dimen/large_avatar_size"
				android:layout_gravity="center_horizontal"
				android:src="@drawable/avatar_placeholder" />
			
			
			<io.peanutsdk.widget.BaselineGridTextView
				android:id="@+id/user_username"
				style="@style/TextAppearance.CommentAuthor"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/padding_normal"
				android:textColor="@color/text_secondary_dark"
				android:textSize="18sp"
				tools:text="Quabynah Bilson" />
			
			<io.peanutsdk.widget.BaselineGridTextView
				style="@style/TextAppearance.DribbbleShotDescription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:text="@string/product_progress_prompt"
				android:textColor="@color/text_secondary_dark"
				app:fontFamily="@font/nunito_semibold" />
			
			<LinearLayout
				android:id="@+id/progress_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="visible">
				
				<ProgressBar
					android:id="@+id/purchase_progress"
					style="@style/Widget.AppCompat.ProgressBar.Horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_margin="@dimen/padding_dialog"
					android:progressTint="@color/designer_news_dark"
					android:secondaryProgressTint="@color/designer_news" />
				
				<io.peanutsdk.widget.BaselineGridTextView
					android:id="@+id/purchase_progress_detail"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:fontFeatureSettings="onum"
					android:padding="@dimen/spacing_normal"
					android:textAppearance="@style/TextAppearance.DribbbleShotDescription"
					android:textColor="@color/text_secondary_dark"
					android:textSize="18sp"
					android:textAlignment="center"
					app:fontFamily="@font/nunito_semibold"
					tools:text="2 days time" />
				
				<Button
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/confirm_delivery"
					android:id="@+id/confirmation"
					android:textAppearance="@style/TextAppearance.DarkButton"
					android:padding="@dimen/padding_normal"
					android:enabled="false"
					android:layout_marginTop="@dimen/padding_normal"
					android:layout_gravity="center_horizontal"/>
			
			</LinearLayout>
			
			<ProgressBar
				android:id="@+id/progress_loading"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_margin="@dimen/spacing_large"
				android:indeterminate="true"
				android:indeterminateBehavior="cycle"
				android:indeterminateTint="@color/text_tertiary_dark"
				android:progressTintMode="src_in" />
		
		</LinearLayout>
	
	</ScrollView>

</io.peanutsdk.widget.ForegroundLinearLayout>